# reliabilityos

./: .gitignore  README.md  catalog-info.yaml  docker-compose.yml  mkdocs.yml
.github/workflows/: ci.yml  tf-apply.yml  tf-destroy.yml
apps/orders-api/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  seed.py
apps/orders-api/alembic/versions/: 001_initial.py
apps/orders-api/app/: config.py  logging_config.py  main.py  messaging.py  metrics.py  middleware.py  models.py  schemas.py  telemetry.py
apps/orders-api/app/routers/: chaos.py  health.py  orders.py  products.py
apps/orders-api/static/: index.html
apps/orders-api/tests/: conftest.py  test_health.py  test_orders.py  test_products.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/tests/: conftest.py  test_tasks.py
apps/worker/worker/: celery_app.py  config.py  database.py  logging_config.py  metrics.py  tasks.py  telemetry.py
argocd/: README.md  alloy.yaml  app-of-apps.yaml  argo-rollouts.yaml  argocd.yaml  blackbox-exporter.yaml  chaos-mesh.yaml  grafana-dashboards.yaml  keda.yaml  kube-prometheus-stack.yaml  litmus.yaml  loki.yaml  orders-api.yaml  postgresql.yaml  rabbitmq.yaml  redis.yaml  tempo.yaml  worker.yaml
chaos/: gameday-template.md
chaos/experiments/: cpu-stress-worker.yaml  network-latency-postgres.yaml  pod-kill-orders-api.yaml
docs/: architecture.md  index.md
docs/playbooks/: postmortem.md  rca.md
docs/runbooks/: budget-exhausted.md  high-error-rate.md  high-latency.md
docs/setup/: secrets.md
docs/sre/: change-policy.md  cost-analysis.md  error-budgets.md  incident-response.md  on-call.md  slos.md
docs/superpowers/plans/: phase1-application-core.md
docs/superpowers/specs/: application-core.md
helm/alloy/: values.yaml
helm/argo-rollouts/: values.yaml
helm/argocd/: values.yaml
helm/blackbox-exporter/: values.yaml
helm/grafana-dashboards/: Chart.yaml
helm/grafana-dashboards/templates/: capacity.yaml  engineering.yaml  executive.yaml  slo-overview.yaml
helm/keda/: values.yaml
helm/kube-prometheus-stack/: values.yaml
helm/litmus/: values.yaml
helm/loki/: values.yaml
helm/orders-api/: Chart.yaml  values.yaml
helm/postgresql/: values.yaml
helm/rabbitmq/: values.yaml
helm/redis/: values.yaml
helm/tempo/: values.yaml
helm/worker/: Chart.yaml  values.yaml
terraform/01-vpc/: endpoints.tf  nat-gateway.tf  outputs.tf  subnets-private.tf  subnets-public.tf  terraform.tfvars  variables.tf  versions.tf  vpc.tf
terraform/02-cluster/: access.tf  acm.tf  argocd.tf  data.tf  ebs-csi.tf  eks-cluster.tf  external-dns.tf  launch-template.tf  load-balancer-controller.tf  locals.tf  loki.tf  main.tf  nginx-ingress.tf  node-group.tf  oidc.tf  outputs.tf  tempo.tf  terraform.tfvars  variables.tf  versions.tf  vpc-cni.tf
terraform/03-ecr/: ecr.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
(+10 files in other folders)
