[project]
name = "worker"
version = "0.1.0"
description = "ReliabilityOS Order Processing Worker"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.7.0",
    "pika>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
include = ["worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
